--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,10 +12,14 @@ body {
  	font: 20px "Lucida Grande", Arial, Helvetica, sans-serif;
  	width: 100%;
 
+	background-color: #eee;
+
  	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-text-size-adjust: none;
 	-webkit-user-select: none;
 
+    font-family: arial, helvetica, sans-serif;
+    font-size: 14px;
 }
 
 input {
@@ -24,21 +28,6 @@ input {
 
 .contents {
 	padding: 15px 15px;
+	border-top: 1px solid #3C4153;
 }
 
-.icon {
-	font-family: arial, helvetica, sans-serif;
-	font-size: 14px;
-}
-
-.icon-sidebar {
-	display: inline;
-	width: 30px;
-	height: 30px;
-	padding: 10px;
-	border: 1px solid #262B3B;
-	border-radius: 4px;
-    background: -webkit-gradient(linear, left top, left bottom,
-                 color-stop(0%,#43495B), 
-                 color-stop(100%, #262B3B));
-}
